Added perm ban.

--- a/src/main/resources/Messages.yml
+++ b/src/main/resources/Messages.yml
@@ -74,12 +74,15 @@ unban_ip_error: "{prefix} &cSomething went wrong while trying to unban ip {ip}."
 #                       Actions
 #----------------------------------------------------------
 player_ban: "{prefix} &a{player} has been banned for {reason}"
+player_ban_no_reason: "{prefix} &a{player} has been banned."
 player_unban: "{prefix} &a{player} is now unbanned."
 player_kick: "{prefix} &a{player} has been kicked for {reason}"
 player_warn: "{prefix} &a{player} has been warned for {reason}"
 player_mute: "{prefix} &a{player} has been muted for {reason}"
 player_unmute: "{prefix} &a{player} is now unmuted."
 ban_message: "&4You have been banned for {reason}\n&cYour suspension expires on &c&l{time}"
+ban_message_no_reason: "&4You have been banned until &c&l{time}"
+ban_message_perm: "&4You have been &c&lperm &4banned!"
 kick_message: "&4You have been kicked for {reason}"
 mute_message: "{prefix} &cYou are muted!"
 ip_ban: "{prefix} &aIP: {ip} has been banned successfully."
