Added perm ban with reason.

--- a/src/main/resources/Messages.yml
+++ b/src/main/resources/Messages.yml
@@ -82,7 +82,8 @@ player_mute: "{prefix} &a{player} has been muted for {reason}"
 player_unmute: "{prefix} &a{player} is now unmuted."
 ban_message: "&4You have been banned for {reason}\n&cYour suspension expires on &c&l{time}"
 ban_message_no_reason: "&4You have been banned until &c&l{time}"
-ban_message_perm: "&4You have been &c&lperm &4banned!"
+ban_message_perm: "&4You have been&c&l permanent &4banned for {reason}"
+ban_message_perm_no_reason: "&4You have been&c&l permanent &4banned!"
 kick_message: "&4You have been kicked for {reason}"
 mute_message: "{prefix} &cYou are muted!"
 ip_ban: "{prefix} &aIP: {ip} has been banned successfully."
